textfield different length, js sum overflow bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,10 @@ body {
     box-shadow: none;
   }
   #nomepiatto{
-    width: 260px;
+    width: 330px;
+  }
+  #prezzopiatto{
+    width: 120px;
   }
 }
 
